--- a/qbit-pvpn-wg-nas.yml
+++ b/qbit-pvpn-wg-nas.yml
@@ -40,7 +40,7 @@ services:
       - PUID=1000
       - PGID=1000
       - WEBUI_PORT=8085
-    #IMPORTANT review OR uncomment the following and replace with your volume mounts (the paths where you want your downloads to go)
+    #IMPORTANT review and uncomment the following and replace with your volume mounts (the paths where you want your downloads to go)
     #On some NAS devices, volumes are exposed as logical shares and the actual on-disk paths are hidden or mapped behind an abstraction layer.
     #For example '/volume1' might actually be 'etc/.../disk1' or '/home/.../vol1/'
     #you will need to figure out how these map to your NAS OS drive relative to your docker setup.
